pkg/provider/kubernetes/ingress-nginx/fixtures/ingresses/ingress-disable-http-entrypoint-limit-allowlist.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-disable-http-entrypoint-limit-allowlist
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/limit-rps: "10"
    nginx.ingress.kubernetes.io/limit-allowlist: "10.0.0.0/24"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - whoami.localhost
      secretName: mySecret
  rules:
    - host: whoami.localhost
      http:
        paths:
          - backend:
              service:
                name: service1
                port:
                  number: 80
            path: /
            pathType: Prefix
